--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>NJACK Winter of Code</title>
+		<link rel="icon" 
+	      type="image/png" 
+	      href="favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,6 +21,8 @@
 <div id="particles-js"></div>
 				<!-- Intro -->
 					<div id="intro">
+						<img src="njack.png" width="100px" alt="">
+						<br>
 						<h1>NJACK<br />
 						Winter of Code</h1>
 						<p>The major goal of NWoC is to help new students to understand the paradigm of Open Source contribution<br> and increase the expertise level on Git and GitHub along with giving them real life development experience.</p>
