--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="particles-js"></div>
 				<!-- Intro -->
 					<div id="intro">
-						<img src="njack.png" width="100px" alt="">
+						<img src="images/logo2.png" width="400px" alt="">
 						<br>
 						<h1>NJACK<br />
 						Winter of Code</h1>
