--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>NJACK Winter of Code</title>
 		<link rel="icon" 
 	      type="image/png" 
-	      href="favicon.ico">
+	      href="short.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 						<br>
 						<h1>NJACK<br />
 						Winter of Code</h1>
-						<p>NWoC helps new students understand the paradigm of Open Source contribution and <br>increase their expertise over Git and Github along with giving them real world development experience.</p>
+						<p>The major goal of NWoC is to help new students to understand the paradigm of Open Source contribution<br> and increase the expertise level on Git and GitHub along with giving them real life development experience.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Resources</a></li>
 						</ul>
@@ -33,13 +33,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.php" class="logo">NWoC</a>
+						<a href="index.html" class="logo">NWoC</a>
 					</header>
 
 				<!-- Nav -->
 					<!-- <nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.php">This is Massively</a></li>
+							<li class="active"><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
