--- a/public/index.html
+++ b/public/index.html
@@ -192,9 +192,64 @@
 							</header>
 							
 						</article>
+						<article class="post featured" id="leaderboard">
+							<header class="major">
+								<h2 >Leaderboard</h2>
+							</header>
+							<center>
+							<div class="table-wrapper">
+								<table class="alt">
+									<thead>
+										<tr>
+											<th>Position</th>
+											<th>Name</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>1</td>
+											<td>Arya Das</td>
+										</tr>
+										<tr>
+											<td>2</td>
+											<td>Kartik Kwatra</td>
+										</tr>
+										<tr>
+											<td>3</td>
+											<td>Ashwin	Samudre</td>
+										</tr>
+										<tr>
+											<td>4</td>
+											<td>Harsh Jindal</td>
+										</tr>
+										<tr>
+											<td>5</td>
+											<td>Akshat Jain</td>
+										</tr>
+										<tr>
+											<td>6</td>
+											<td>Vansh Soni</td>
+										</tr>
+										<tr>
+											<td>7</td>
+											<td>Balakrishna Sahu</td>
+										</tr>
+										
+										<tr>
+											<td>8</td>
+											<td>Ayush Kumar Gupta</td>
+										</tr>
+										<tr>
+											<td>9</td>
+											<td>Rahul Grover</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</center>
+						</article>
 
-
-						<article class="post featured">
+						<article class="post featured" id="timeline">
 							<header class="major">
 								<h2>Timeline</h2>
 							</header>
