Creds cleanup for GitHub

--- a/public/index.html
+++ b/public/index.html
@@ -349,12 +349,7 @@
 							<header class="major" id="register">
 								<h2>Register</h2>
 								<p>
-									<ul type="none" class="actions">
-										<ul type="none" class="actions">
-										<li><a href="https://docs.google.com/forms/d/1IBP83aSPvbkytBMBdUNLXO5UR_gsc4vQGeELXIswer4/viewform" class="button big" target="_blank">Student</a></li>
-										<!-- <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKeE8hL9jwRfPsQbbNP1HNB7XhYO0ZerOZ21ct8mJjNlWZ0Q/viewform" class="button big" target="_blank">Mentor</a></li> -->
-									</ul>
-									</ul>
+									<h3>NWoC 2017 has concluded. <br>Check back next year for more fun with open-source!</h3>
 								</p>
 								<br>
 								<br>
@@ -371,7 +366,7 @@
 						</article>
 					
 					<article class="post featured">
-							<header class="major" id="register">
+							<header class="major" id="">
 								<h2 style="font-size: 2em">Sponsor</h2>
 							<p>
 								<a href="https://github.com" target="_blank">
